fixed most of the alignment and positioning on new caption components

--- a/_scss/components/image-block-caption.scss
+++ b/_scss/components/image-block-caption.scss
@@ -1,30 +1,35 @@
 .image-block-caption {
-  .block {
-    display: flex;
-    flex-flow: column;
-    padding-left: 3.5%;
-    @media (min-width: $bp-tablet-vert) {
-      flex-flow: row-reverse;
-    }
+  .container {
+    .block {
+      display: flex;
+      flex-flow: column;
+      padding-left: 3.5%;
+      @media (min-width: $bp-tablet-vert) {
+        flex-flow: row-reverse;
+        align-items: center;
+        width: 85%;
+        padding-left: $m-grid-col1;
+      }
 
-    .caption {
-      padding-top: 15px;
-      @media (min-width: $bp-tablet-vert) {
-        width: 50%;
+      .grid--col2 {
+        @media (min-width: $bp-tablet-vert) {
+          padding-left: 3.5%;
+        }
+        @media (min-width: $bp-laptop) {
+          padding-top: 20px;
+          padding-left: 10%;
+          width: $w-grid-col2;
+        }
       }
-      @media (min-width: $bp-laptop) {
-        margin-left: $m-grid-col1;
-        width: 20%;
-        padding-top: 40px;
-      }
-    }
-    .grid--col2 {
-      @media (min-width: $bp-tablet-vert) {
-        padding-left: 3.5%;
-      }
-      @media (min-width: $bp-laptop) {
-        padding-top: 20px;
-        width: $w-grid-col2;
+
+      .caption {
+        @media (min-width: $bp-tablet-vert) {
+          width: 50%;
+        }
+        @media (min-width: $bp-laptop) {
+          width: 20%;
+          padding-top: 40px;
+        }
       }
     }
   }
