--- a/_scss/pages/trailtag.scss
+++ b/_scss/pages/trailtag.scss
@@ -98,12 +98,6 @@
           padding-left: $m-grid-col2;
         }
       }
-      .caption {
-        @media (min-width: $bp-laptop) {
-          position: relative;
-          bottom: 275px;
-        }
-      }
     }
 
 
